<resources>
    <string name="app_name" translatable="false">Roasting Boulevard</string>
    <string name="init">Start</string>
    <string name="combos">Combos</string>
    <string name="dishes">Dishes</string>
    <string name="information">Information</string>
    <string name="profile">Profile</string>
    <string name="start_order">Start order</string>
    <string name="init_welcome">Welcome</string>
    <string name="init_question">What do you fancy today?</string>
    <string name="order_now">Place order</string>
    <string name="profile_welcome">Hello</string>
    <string name="payment_method">Payment method</string>
    <string name="changue_delivery">Delivery addresses</string>
    <string name="personal_data">Personal data</string>
    <string name="my_orders">My orders</string>
    <string name="configuration">Configuration</string>
    <string name="close_session">Close session</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="postal_code">Postal code</string>
    <string name="city">City</string>
    <string name="address">Address</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="lets_create">Let\'s create your profile</string>
    <string name="please_introduce">Please introduce your data</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="access_profile">Access to your profile</string>
    <string name="log_on">Log on</string>
    <string name="register">Register</string>
    <string name="error_Fields_Filled">Error: All fields must be filled</string>
    <string name="error_Password_Not_Match">Error: Passwords must match</string>
    <string name="error_Email">Error: the email format is not correct</string>
    <string name="registered">Registered correctly</string>
    <string name="error_Login">Authentication failed</string>
    <string name="error_Lenght_Password">Error: Passwords must be 6 or higher</string>
    <string name="label">Label</string>
    <string name="street_name">Street name</string>
    <string name="street_number">Street number</string>
    <string name="example_address_types">Portal/Ladder/Floor (Optional)</string>
    <string name="create_address">Create address</string>
    <string name="edit_address">Edit address</string>
    <string name="yes">Yes</string>
    <string name="No">No</string>
    <string name="are_you_sure">Are you sure?</string>

    <string name="croquetasJamon">Ham croquettes</string>
    <string name="descriptCroquetasJamon">Croquettes filled with bechamel sauce mixed with Iberian ham</string>
    <string name="ingredientsCroquetasJamon">Bread crumbs, flour, milk, milk, salt, ham</string>

    <string name="bolasPollo">Chicken dumplings</string>
    <string name="descript_bolasPollo">Chicken dumplings created with a mixture of chicken, milk, garlic and pepper.</string>
    <string name="ingredients_bolasPollo">Egg, garlic, pepper, flour, bread crumbs, chicken</string>

    <string name="nuggets">Chicken Nuggets</string>
    <string name="descript_nuggets">Chicken nuggets created with a mixture of chicken and milk in a breadcrumb breadcrumb batter</string>
    <string name="ingredients_nuggets">Egg, flour, chicken, milk, bread crumbs, salt</string>

    <string name="croquetasPollo">Chicken croquettes</string>
    <string name="descript_croquetasPollo">Croquettes filled with bechamel sauce mixed with chicken and bread crumbs.</string>
    <string name="ingredients_croquetasPollo">Bread crumbs, flour, milk, milk, salt, ham</string>

    <string name="patatasFritas">French fries</string>
    <string name="descript_patatasFritas">Potatoes cut into thin strips and fried.</string>
    <string name="ingredients_patatasFritas">Potatoes</string>

    <string name="patatasPanaderas">" Baked potatoes"</string>
    <string name="descript_patatasPanaderas">Sliced potatoes with strips of peppers and onion.</string>
    <string name="ingredients_patatasPanaderas">Potatoes, peppers, onion.</string>

    <string name="costillas">Ribs</string>
    <string name="descript_costillas">Half pork ribs sprinkled with barbecue sauce.</string>
    <string name="ingredients_costillas">Pork, barbecue sauce</string>

    <string name="paella">Paella</string>
    <string name="descript_paella">Mixed paella with chicken, peas, shrimps, mussels and squid.</string>
    <string name="ingredients_paella">Chicken, peas, shrimps, mussels, squid and rice</string>

    <string name="cachopo">Cachopo</string>
    <string name="descript_cachopo">Two veal fillets with Serrano ham and cheese between them, breaded with bread crumbs.</string>
    <string name="ingredients_cachopo">Beef, ham, cheese, breadcrumbs, egg</string>

    <string name="bacalao">Cod with ratatouille</string>
    <string name="descript_bacalao">Cod with a mixture of different vegetables.</string>
    <string name="ingredients_bacalao">Codfish, zucchini, bell bell pepper, tomato, onion and garlic</string>

    <string name="ensaladilla">Olivier salad</string>
    <string name="descript_ensaladilla">Mixture of various cooked vegetables with mayonnaise.</string>
    <string name="ingredients_ensaladilla">Boiled potato, peas, egg, carrot, peppers, tuna, mayonnaise</string>

    <string name="pollo">Roasted chicken</string>
    <string name="descript_pollo">Roasted chicken with lemon and spice sauce</string>
    <string name="ingredients_pollo">Chicken, lemon, salt, pepper, oil.</string>

    <string name="filetePollo">Chicken fillet</string>
    <string name="descript_filetePollo">Battered and fried chicken fillet.</string>
    <string name="ingredients_filetePollo">Chicken, egg, salt, bread.</string>

    <string name="librito">Stuffed Chicken Loin</string>
    <string name="descript_librito">Two chicken fillets with cheese between them, all in batter.</string>
    <string name="ingredients_librito">Chicken, cheese, egg, bread</string>

    <string name="alitas">Chicken wings</string>
    <string name="descript_alitas">Battered chicken wings.</string>
    <string name="ingredients_alitas">Chicken, egg, salt, bread</string>

    <string name="macedonia">Fruit salad</string>
    <string name="descript_macedonia">Various cut fruits mixed with syrup.</string>
    <string name="ingredients_macedonia">Banana, orange, kiwi, pineapple, apple, mandarin orange</string>
    <string name="tartaQueso">Cheesecake</string>
    <string name="ingredients_tartaQueso">Cream cheese, cream, butter, butter, eggs, suggar</string>
    <string name="tartaChocolate">Chocolatte cake</string>
    <string name="ingredients_tartaChocolate">Butter, chocolate, cream, gelatin</string>


    <string name="snack">Snack</string>
    <string name="portion">Portion</string>
    <string name="chicken">Chicken</string>
    <string name="desserts">Desserts</string>
    <string name="descript_tartaQueso">Baked cheese, cream and egg mixture.</string>
    <string name="descript_tartaChocolate">Dark chocolate and cream mix ready to go.</string>
    <string name="your_order">Your order</string>
    <string name="ingredients">Ingredients</string>
    <string name="allergens">Allergens</string>
    <string name="temp" translatable="false">temp string</string>
    <string name="select_address">Select your address</string>
    <string name="please_login_register">Please login or create a new account</string>
    <string name="gluten">Gluten</string>
    <string name="eggs">Eggs</string>
    <string name="dairy">Dairy</string>
    <string name="nuts">Nuts</string>
    <string name="fish">Fish</string>
    <string name="seafood">Seafood</string>
    <string name="create_edit_address">Create or edit an address</string>
    <string name="process_order">Process order</string>
    <string name="add_more_food">Add more food</string>
    <string name="what_waiting_for">What are you waiting for to register?</string>
    <string name="cash">Cash</string>
    <string name="card_number">Card number</string>
    <string name="expiration_date">Expiration date</string>
    <string name="finish">Finish</string>
    <string name="added_cart">Added %1$s to the cart</string>
    <string name="confirmation">Confirmation</string>
    <string name="where_we_are">Where are we?</string>
    <string name="address_number">Falsa St Nº123</string>
    <string name="city_postalcode" translatable="false">Springfield 24530</string>
    <string name="send_recover_email">Send password recovery email?</string>
    <string name="recovery_email_sended">Recovery email sended</string>
    <string name="create">Create</string>
    <string name="edit">Edit</string>
    <string name="edit_data">Edit your data</string>
    <string name="session_closed">Session closed</string>
    <string name="error_have_food">Error: must have food in your cart</string>
    <string name="your_deliveries">Your deliveries</string>
    <string name="received">Received</string>
    <string name="cooking">Cooking</string>
    <string name="distribution">Distribution</string>
    <string name="delivered">Delivered</string>
    <string name="notification_tittle">Your order it\'s here</string>
    <string name="order_cooking">Your order is being cooked, it will be delivered shortly</string>
    <string name="error_address">Error: an address with this name already exists.</string>
    <string name="error_fields_address">Error: all mandatory fields must be filled</string>
</resources>