<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scene_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">


    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pagerMain"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:animateLayoutChanges="true"
        android:transitionName="pagerMain"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/recyclerOrder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.viewpager.widget.ViewPager>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerOrder"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/paleRed"
        android:scaleY="0"
        android:transformPivotY="685dp"
        android:transitionName="recyclerOrder"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/seeOrderLayoutButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/seeOrderLayoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:scaleY="1"
        android:transformPivotY="55dp"
        app:layout_constraintBottom_toTopOf="@+id/tabsMain">

        <View
            android:id="@+id/view3"
            android:layout_width="408dp"
            android:layout_height="55dp"
            android:background="@color/paleOrange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="16dp"
            android:text="@string/your_order"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="52dp"
            android:layout_height="0dp"
            android:padding="12dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/view3"
            app:srcCompat="@android:drawable/arrow_up_float" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabsMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@color/teal_700"
        app:tabTextAppearance="@style/MyCustomTabText"
        app:tabTextColor="@color/black">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/initTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/init" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/combosTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/combos" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/dishesTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dishes" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/informationTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/information" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/profileTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile" />
    </com.google.android.material.tabs.TabLayout>

</androidx.constraintlayout.widget.ConstraintLayout>