<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.CreateDirectionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="49dp"
        android:layout_weight="1"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:pointerIcon="zoom_in"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/abc_vector_test" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        android:fillViewport="true"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayout4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0.2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingTop="10dp"
                        android:text="@string/label" />

                    <EditText
                        android:id="@+id/editTextNewLabel"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:selectAllOnFocus="true" />

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingTop="10dp"
                        android:text="@string/street_name" />

                    <EditText
                        android:id="@+id/editTextNewStreetName"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingTop="10dp"
                        android:text="@string/street_number" />

                    <EditText
                        android:id="@+id/editTextNewStreetNumber"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:inputType="number" />

                    <View
                        android:id="@+id/view2"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:paddingTop="10dp" />

                    <EditText
                        android:id="@+id/editTextNewAddressType"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:hint="@string/example_address_types"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView4"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingTop="10dp"
                        android:text="@string/postal_code" />

                    <EditText
                        android:id="@+id/editTextNewPostalCode"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginTop="10dp"
                        android:gravity="bottom"
                        android:paddingTop="10dp"
                        android:text="@string/city" />

                    <EditText
                        android:id="@+id/editTextNewCity"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:ems="10"
                        android:inputType="textPersonName" />

                    <TextView
                        android:id="@+id/textViewErrorCreateAddres"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:textColor="@color/red" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buttonCreateNewAddress"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:inputType="number"
                android:text="@string/create_address"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>